
v0.2.0:
 - introduced hLink
 - implemented resuming downloads
 - fix konami code easter egg not working
 - fix bug where single line panic message wouldn't show
 - add find missing dlc/updates feature
 - add translations
 - add proxy support
 - add sprites for battery
 - add a loading animation
 - major speed improvements
 - add luma locale emulator support
 - fix issue where 3hs wouldn't work if time & date was wrong

v0.1.6:
 - added extended meta screen
 - fix cdn not working

v0.1.5:
 - fixed buttons being blank

v0.1.4:
 - fixed issue decoding utf16 and scrolling if text didn't overflow in texts and generally improved the look of it
 - fixed crash that would occur if you attempted to add a title to the queue or when you try to install a title

v0.1.3:
 - fixed bug that crashed 3hs on launch

v0.1.2:
 - fixed spelling mistakes in help menu and settings menu
 - fixed crash that would occur if initial index fetch failed, now it shows an error message
 - fixed issue where the action description would not load when searching
 - made the screen redraw less often while installing, hopefully increasing install speeds
 - 3hs now imports seeds for titles after installation if a seed is available
